Remove java9-tests module
This module does not compile in Eclipse due to additional
checks that Eclipse performs on the module path vs class
path.